--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <!-- Begin page content -->
     <main class="flex-shrink-0">
-        <div class="container" id="employee-weekly-entry" v-id="!loading">
+        <div class="container" id="employee-weekly-entry" v-if="!loading">
             <div class="row mt-5">
                 <div class="col">
                     <h1>Timesheet</h1>
